pkl-core/src/test/files/LanguageSnippetTests/input/errors/const/constFunctionCallingNonConst.pkl
function nonConstFunction() = "hello"

const function constFunctionCallingNonConst(): (String) -> String = (s) -> s + nonConstFunction()

res = constFunctionCallingNonConst().apply("prefix")
